--- a/gatsby-starter-default/package.json
+++ b/gatsby-starter-default/package.json
@@ -9,13 +9,15 @@
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.10",
     "gatsby": "^5.6.1",
+    "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-image": "^3.6.0",
     "gatsby-plugin-manifest": "^5.6.0",
     "gatsby-plugin-sharp": "^5.6.0",
     "gatsby-source-filesystem": "^5.6.0",
     "gatsby-transformer-sharp": "^5.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "^2.8.4"
