--- a/gatsby-starter-default/package.json
+++ b/gatsby-starter-default/package.json
@@ -20,6 +20,7 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "prettier": "^2.8.4"
   },
   "keywords": [
