--- a/gatsby-starter-default/package.json
+++ b/gatsby-starter-default/package.json
@@ -17,7 +17,8 @@
     "gatsby-transformer-sharp": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "typeface-lato": "^1.1.13"
   },
   "devDependencies": {
     "gh-pages": "^5.0.0",
